<resources>
    <string name="app_name">天神贷</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="check_network">请检查网络</string>
    <string name="loading">数据加载中……</string>
    <string name="ServiceFaile">网络不给力</string>
    <string name="SendSuccess">发送成功</string>
    <string name="Sendfaile">发送失败</string>
    <string name="network_error">网络不给力~</string>
    <string name="not_get_image_uploading_fail">无法获取缓存图片，上传失败！</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    <!-- WXPayEntryActivity -->

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="initialization_please_wait">正在初始化，请等待</string>


    <string name="pay_protocol">《快捷支付协议》</string>
    <string name="confirm_protocol_all_text">同意《借款协议》《居间服务协议》</string>
    <string name="confirm_protocol_all_text2">同意《借款协议》《居间服务协议》《人行征信查询授权书》</string>

    <string name="bind_card_confirm_text">我已阅读并同意《平安银行网络借贷资金三方存管协议》</string>
    <string name="confirm_protocol_tips">借款到账后,平台将收取综合费用</string>

    <string name="tipsmouth">Open your mouth and close.</string>
    <string name="tipblink">Do blink with your eyes.</string>
    <string name="tippose">Rotate your pose vertically.</string>
    <string name="facelost">Face Lost</string>
    <string name="timeout">超时</string>
    <string name="authok">Success</string>
    <string name="aufail">Failed</string>
    <string name="steps">活体检测:</string>
    <string name="pos_detection">POS</string>
    <string name="mouth_detection">MOUTH</string>
    <string name="blink_detection">BLINK</string>

    <array name="detect_type">
        <item>眨眼</item>
        <item>张嘴</item>
        <item>摇头</item>
    </array>
    <array name="detect_result">
        <item></item>
        <item>LIVEPASS</item>
        <item>人脸追踪失败</item>
        <item>超时失败</item>
        <item>LIVENOTPASS</item>
    </array>
    <string name="loading_text">使用说明：\n1、首先您需要输入姓名；\n2、之后您需要按照屏幕上的提示完成3个动作，以通过活体检测，同时软件会将您的人脸图像发送至服务器进行人脸验证；\n3、如果您没有通过活体检测或者人脸验证，则登陆失败，反之则登陆成功。</string>
    <string name="loading_confirm">OK,I Know</string>
    <string name="netowrk_parse_failed">解析服务器数据失败</string>
    <string name="verify_error">验证失败</string>
    <string name="verify_success">验证成功</string>
    <string name="liveness_detection_failed">活体检测失败</string>
    <string name="liveness_detection_failed_timeout">活体检测超时失败</string>
    <string name="liveness_detection_failed_action_blend">活体检测动作错误</string>
    <string name="liveness_detection_failed_not_video">活体检测连续性检测失败</string>
    <string name="novalidframe">没有合适的图像用于人脸识别</string>

    <string name="invite_friend_button_text">立即邀友赚钱</string>
    <string name="invite_share_to_friends">分享给好友</string>
    <string name="invite_share_title_wechat">微信好友</string>
    <string name="invite_share_title_weibo">微博</string>
    <string name="invite_share_title_qq">QQ</string>
    <string name="invite_share_title_friends">朋友圈</string>
    <string name="invite_share_dialog_text">面对面邀请</string>


    <string name="forget_password">忘记密码?</string>
    <string name="please_open_permission">请开启权限</string>

    <string name="text_share_web_cancel">取消</string>
    <string name="text_me_login_or_register">登录/注册</string>

    <string name="message_center_empty">有消息会第一时间通知哦~</string>

    <string name="text_confirm_bank_card_info">确认收款信息</string>

    <!--还款页面文本-->
    <string name="text_repay_tips_title">郑重提示:</string>
    <string name="text_repay_tips_important_tip">请勿在自己银行账户余额不足时就点击确认按钮！！</string>
    <string name="text_repay_tips_normal_title">强烈建议用户还款时注意以下4点:</string>
    <string name="text_repay_tips_normal_tip1">1.还款前请确保自己的银行账户内余额大于应还款总金额。</string>
    <string name="text_repay_tips_normal_tip2">2.还款前如果是他人先转账给你,请在确认转账到账至少10分钟再进行还款操作。</string>
    <string name="text_repay_tips_normal_tip3">3.单日点击还款按钮次数不要超过3次！</string>
    <string name="text_repay_tips_normal_tip4">4.按时主动还款好处多,请尽量避免逾期还款。</string>

    <string name="text_popu_money">元综合费用。\n借款后请按时还款，逾期不还的用户将依法报送全国人民征信系统，不良的信用记录将影响您未来的其他贷款（如房贷和车贷）、个人求职、境外旅游等。</string>

    <string name="text_no_loan_history">暂无借款记录</string>
    <string name="no_student_home">不向学生提供借款服务</string>

    <string name="title_risk_pre_auth_identity">身份认证</string>
    <string name="text_risk_pre_top_tips">公安部联网认证,请务必上传本人有效二代身份证</string>
    <string name="text_risk_pre_identity_front">身份证人像面</string>
    <string name="text_risk_pre_identity_back">身份证国徽面</string>
    <string name="text_risk_pre_real_name">真实姓名</string>
    <string name="text_risk_pre_id_number">身份证号</string>
    <string name="text_risk_pre_bottom_tips">请确保识别出的身份信息与身份证一致</string>
    <string name="text_risk_pre_commit">提交</string>

    <string name="title_risk_pre_face_title">人脸识别</string>
    <string name="text_risk_pre_face_start_scan">开始检测</string>
    <string name="text_risk_pre_face_scan">人脸识别扫描</string>
    <string name="text_risk_pre_face_notice">注意事项</string>
    <string name="text_risk_pre_face_notice_1">1.请本人亲自完成,将镜头对准您的脸,并按提示做动作。</string>
    <string name="text_risk_pre_face_step_1">正对手机</string>
    <string name="text_risk_pre_face_step_2">光线充足</string>
    <string name="text_risk_pre_face_step_3">放慢动作</string>
    <string name="auth_center_menu_info">首次借款请先完成以下认证信息</string>
    <string name="auth_center_menu_identity">身份认证</string>
    <string name="auth_center_menu_person_info">个人信息认证</string>
    <string name="auth_center_menu_credit">信用认证</string>
    <string name="auth_center_blank_credit">1.请确保银行卡预留手机号为注册手机号 \n2.请确保绑定的银行卡为储蓄卡,信用卡将无法成功放款 \n3.请确保储蓄卡为本人所有，绑定他人的银行卡将无法成功放款 \n4.借款期间请妥善保管银行卡，放款和还款均以该银行卡为标准</string>


    <string name="text_evaluate_amount_evaluating">额度评测中</string>
    <string name="text_evaluate_amount_refresh">请10分钟后下拉刷新查看</string>
    <string name="text_evaluate_amount_wait">等待无聊? 去看看笑话吧></string>
    <string name="text_evaluate_amount_tips">温馨提示:</string>
    <string name="text_evaluate_amount_tips_1">1.如果超过半小时仍在评测阶段,可能是第三方数据获取滞后,请您耐心等待;</string>
    <string name="text_evaluate_amount_tips_2">2.如遇其他特殊情况,客服将会及时与您联系;</string>
    <string name="text_risk_pre_agreement">我同意《借款协议》《居间服务协议》《征信查询授权书》</string>
    <string name="text_risk_pre_tips">借款到账后,将依照协议收取平台综合费用</string>

    <string name="title_risk_pre_supply">信息补充</string>
    <string name="text_risk_pre_supply_name">请填写真实姓名</string>
    <string name="text_risk_pre_supply_id_num">请填写真实身份证号</string>
    <string name="text_risk_pre_supply_tip">请确保填写的信息与身份证一致</string>

    <string name="text_repay_bank_item_info">(支付宝将另收取%s元支付通道费)</string>
</resources>
