<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg_white"
    tools:context="com.tianshen.cash.activity.EvaluateAmountActivity">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/srl_evaluate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_evaluate_top_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/evaluate_amount_bg" />

            <com.tianshen.cash.view.EqualWHAnimationImageView
                android:id="@+id/iv_circle_evaluate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/evaluate_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_circle_evaluate"
                android:layout_alignTop="@id/iv_circle_evaluate"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/text_evaluate_amount_evaluating"
                android:textColor="@color/global_txt_white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_evaluate_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_circle_evaluate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/text_evaluate_amount_refresh"
                android:textColor="@color/global_txt_white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_evaluate_joke"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@id/tv_evaluate_tip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:background="@drawable/shape_evaluate_tv_bg"
                android:gravity="center"
                android:text="@string/text_evaluate_amount_wait"
                android:textColor="@color/global_txt_white"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_evaluate_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_evaluate_amount_tips"
                    android:textColor="@color/global_txt_black4"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_evaluate_amount_tips_1"
                    android:textColor="@color/global_txt_black4"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tips2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_evaluate_amount_tips_2"
                    android:textColor="@color/global_txt_black4"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</RelativeLayout>
