<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg_gray"
    android:orientation="vertical"
    tools:context="com.tianshen.cash.activity.RiskPreAuthIdentitySupplyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/global_bg_white">

        <TextView
            android:id="@+id/tv_risk_pre_supply_back"
            style="@style/title_back_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_auth_bank_card_title"
            style="@style/title_txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_risk_pre_supply" />
    </RelativeLayout>

    <include layout="@layout/layout_global_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/split_line_style"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/global_bg_white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/icon_risk_pre_top_tips" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_risk_pre_top_tips"
                    android:textColor="@color/global_txt_black5"
                    android:textSize="12sp" />
            </LinearLayout>

            <View style="@style/split_line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/global_bg_white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="start"
                    android:text="@string/text_risk_pre_identity_front"
                    android:textColor="@color/global_txt_black5"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_risk_pre_add_front"
                    android:layout_width="187dp"
                    android:layout_height="125dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/risk_pre_supply_front" />
            </LinearLayout>

            <View style="@style/split_line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/global_bg_white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="start"
                    android:text="@string/text_risk_pre_identity_back"
                    android:textColor="@color/global_txt_black5"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_risk_pre_add_back"
                    android:layout_width="187dp"
                    android:layout_height="125dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/risk_pre_supply_back" />

            </LinearLayout>

            <View style="@style/split_line_style" />

            <RelativeLayout
                android:id="@+id/rl_risk_pre_name_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/global_bg_white">

                <TextView
                    android:id="@+id/tv_risk_pre_real_name"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/text_risk_pre_real_name"
                    android:textColor="@color/global_txt_black5"
                    android:textSize="14sp" />\

                <EditText
                    android:id="@+id/et_risk_pre_supply_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/tv_risk_pre_real_name"
                    android:background="@null"
                    android:hint="@string/text_risk_pre_supply_name"
                    android:textColor="@color/global_txt_black4"
                    android:textColorHint="@color/global_txt_gray"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_risk_pre_id_num_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/global_bg_white">

                <View style="@style/split_line_style" />

                <TextView
                    android:id="@+id/tv_risk_pre_id_num"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/text_risk_pre_id_number"
                    android:textColor="@color/global_txt_black5"
                    android:textSize="14sp" />\

                <EditText
                    android:id="@+id/et_risk_pre_supply_id_num"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/tv_risk_pre_id_num"
                    android:background="@null"
                    android:hint="@string/text_risk_pre_supply_id_num"
                    android:textColor="@color/global_txt_black4"
                    android:textColorHint="@color/global_txt_gray"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_risk_pre_bottom_tips_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <View style="@style/split_line_style" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_risk_pre_supply_tip"
                    android:textColor="@color/edit_text_hint_color"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_risk_pre_supply_commit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape_home_button_border"
                android:gravity="center"
                android:text="@string/text_risk_pre_commit"
                android:textColor="@color/global_txt_white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
